# Controller/response/Role.go
@@ -1,0 +1,13 @@
+package response
+
+import "Book/Database/Models"
+
+type RoleResponse struct {
+	Data *Models.Role
+	Meta
+}
+
+type ListRoleResponse struct {
+	Data []*Models.Role
+	Meta
+}
